---
source: crates/ruff_linter/src/rules/flake8_pytest_style/mod.rs
---
PT015 Assertion always fails, replace with `pytest.fail()`
 --> PT015.py:9:5
  |
9 |     assert None
  |     ^^^^^^^^^^^
  |

PT015 Assertion always fails, replace with `pytest.fail()`
  --> PT015.py:10:5
   |
10 |     assert False
   |     ^^^^^^^^^^^^
   |

PT015 Assertion always fails, replace with `pytest.fail()`
  --> PT015.py:11:5
   |
11 |     assert 0
   |     ^^^^^^^^
   |

PT015 Assertion always fails, replace with `pytest.fail()`
  --> PT015.py:12:5
   |
12 |     assert 0.0
   |     ^^^^^^^^^^
   |

PT015 Assertion always fails, replace with `pytest.fail()`
  --> PT015.py:13:5
   |
13 |     assert ""
   |     ^^^^^^^^^
   |

PT015 Assertion always fails, replace with `pytest.fail()`
  --> PT015.py:14:5
   |
14 |     assert f""
   |     ^^^^^^^^^^
   |

PT015 Assertion always fails, replace with `pytest.fail()`
  --> PT015.py:15:5
   |
15 |     assert []
   |     ^^^^^^^^^
   |

PT015 Assertion always fails, replace with `pytest.fail()`
  --> PT015.py:16:5
   |
16 |     assert ()
   |     ^^^^^^^^^
   |

PT015 Assertion always fails, replace with `pytest.fail()`
  --> PT015.py:17:5
   |
17 |     assert {}
   |     ^^^^^^^^^
   |

PT015 Assertion always fails, replace with `pytest.fail()`
  --> PT015.py:18:5
   |
18 |     assert list()
   |     ^^^^^^^^^^^^^
   |

PT015 Assertion always fails, replace with `pytest.fail()`
  --> PT015.py:19:5
   |
19 |     assert set()
   |     ^^^^^^^^^^^^
   |

PT015 Assertion always fails, replace with `pytest.fail()`
  --> PT015.py:20:5
   |
20 |     assert tuple()
   |     ^^^^^^^^^^^^^^
   |

PT015 Assertion always fails, replace with `pytest.fail()`
  --> PT015.py:21:5
   |
21 |     assert dict()
   |     ^^^^^^^^^^^^^
   |

PT015 Assertion always fails, replace with `pytest.fail()`
  --> PT015.py:22:5
   |
22 |     assert frozenset()
   |     ^^^^^^^^^^^^^^^^^^
   |

PT015 Assertion always fails, replace with `pytest.fail()`
  --> PT015.py:23:5
   |
23 |     assert list([])
   |     ^^^^^^^^^^^^^^^
   |

PT015 Assertion always fails, replace with `pytest.fail()`
  --> PT015.py:24:5
   |
24 |     assert set(set())
   |     ^^^^^^^^^^^^^^^^^
   |

PT015 Assertion always fails, replace with `pytest.fail()`
  --> PT015.py:25:5
   |
25 |     assert tuple("")
   |     ^^^^^^^^^^^^^^^^
   |
